# GeoGabble

./: Cargo.toml  README.md  Shuttle.toml
.github/workflows/: devskim.yml  rust-clippy.yml  rust.yml
src/: lib.rs  main.rs
src/connection/: connection.rs
src/core/: location.rs  mod.rs  reset.rs
src/error/: error.rs
src/logging/: kafka_consumer.rs  mod.rs
src/models/: message_model.rs  mod.rs
src/routes/: mod.rs  sc_threads.rs  web_scoket.rs
src/utils/: app_state.rs  mod.rs  redis_response.rs
src/utils/failovers/: retry.rs
