[package]
name = "global-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
axum_session = { version = "0.12.4", features = ["redis-db"] }
redis = "0.24.0"
bb8-redis = "0.14.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
