[package]
name = "global-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
axum_session = { version = "0.12.4", features = ["redis-db"] }
redis = "0.24.0"
bb8-redis = "0.14.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
futures-retry = "0.6.0"
tokio-retry = "0.3.0"
shuttle-runtime = "0.39.0"
shuttle-axum = "0.39.0"
shuttle-secrets = "0.39.0"
# kafka = "0.10.0"
# rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl", "sasl", "ssl-vendored"] }
# sasl2-sys = { version = "0.1.20", features = ["openssl-sys", "openssl-vendored"] }
# ecies = {version = "0.2", default-features = false, features = ["pure"]}
# openssl = { version = "0.10.45", features = ["vendored"] }
# rdkafka = { version = "0.36", features = ["cmake-build"] }
# rdkafka-sys = "4.7.0"

